--- a/v3/pages/index.mdx
+++ b/v3/pages/index.mdx
@@ -1,11 +1,15 @@
 import Link from 'next/link'
 import Layout from '../lib/layout'
+import Index from '../lib/index'
 
 export const meta={ title: '8-p.info' }
 
 # 8-p.info
 
+<Index />
+
 Hello! This is [Kazuyoshi Kato](/me/)'s homepage. I'm a Japanese software developer in Seattle, Washingon.
+
 
 ## Things I made recently
 
