Move /now/ to Next

--- a/v3/pages/index.mdx
+++ b/v3/pages/index.mdx
@@ -1,8 +1,7 @@
 import Link from 'next/link'
-import Layout from '../lib/layout'
 import Index from '../lib/index'
 
-export const meta={ title: '8-p.info' }
+export const title = '8-p.info'
 
 <Index />
 
@@ -31,4 +30,3 @@ I have [blogs](https://blog.8-p.info/) to write some other opinions and thoughts
 * [CoRecursive](https://corecursive.com/)
 * [Your Undivided Attention](https://www.humanetech.com/podcast)
 
-export default ({ children }) => <Layout meta={meta}>{children}</Layout>
