--- a/v3/pages/me.mdx
+++ b/v3/pages/me.mdx
@@ -3,7 +3,7 @@ export const title = 'Kazuyoshi Kato / 加藤 和良'
 
 import {Company, Title} from '../lib/work.tsx'
 
-<h1><div class="en">Kazuyoshi Kato</div><div class="ja">加藤 和良</div></h1>
+<h1><div className="en">Kazuyoshi Kato</div><div className="ja">加藤 和良</div></h1>
 
 Hello! My name is Kazuyoshi Kato. I'm a Japanese software developer in Seattle, Washington. I work for [Amazon Web Services](https://aws.amazon.com/).
 
