--- a/v3/pages/index.mdx
+++ b/v3/pages/index.mdx
@@ -5,7 +5,8 @@ export const title = '8-p.info'
 
 <Index />
 
-Hello! This is [Kazuyoshi Kato](/me/)'s homepage. I'm a Japanese software developer in Seattle, Washingon.
+Hello! This is <Link href="/me/">Kazyyoshi Kato</Link>'s homepage.
+I'm a Japanese software developer in Seattle, Washingon.
 
 
 ## Things I made recently
