--- a/v3/pages/index.mdx
+++ b/v3/pages/index.mdx
@@ -1,5 +1,6 @@
 import Link from 'next/link'
 import Index from '../lib/index'
+import {Maze} from '../lib/maze'
 
 export const title = '8-p.info'
 
