I cannot spell my name

--- a/v3/pages/index.mdx
+++ b/v3/pages/index.mdx
@@ -6,7 +6,7 @@ export const title = '8-p.info'
 
 <Index />
 
-Hello! This is <Link href="/me/">Kazyyoshi Kato</Link>'s homepage.
+Hello! This is <Link href="/me/">Kazuyoshi Kato</Link>'s homepage.
 I'm a Japanese software developer in Seattle, Washingon.
 
 
