Add authors and hosts

--- a/v3/pages/index.mdx
+++ b/v3/pages/index.mdx
@@ -23,12 +23,12 @@ I have [blogs](https://blog.8-p.info/) to write some other opinions and thoughts
 
 ## Others' opinion about software development that I can agree
 
-* [Simple, correct, fast: in that order](https://drewdevault.com/2018/07/09/Simple-correct-fast.html) (Drew DeVault)
-* [Computers can be understood](https://blog.nelhage.com/post/computers-can-be-understood/) (Nelson Elhage)
+* [Simple, correct, fast: in that order](https://drewdevault.com/2018/07/09/Simple-correct-fast.html) by Drew DeVault
+* [Computers can be understood](https://blog.nelhage.com/post/computers-can-be-understood/) by Nelson Elhage
 
 ## Good podcasts
 
-* [Planet Money](https://www.npr.org/podcasts/510289/planet-money/)
-* [CoRecursive](https://corecursive.com/)
-* [Your Undivided Attention](https://www.humanetech.com/podcast)
+* [Planet Money](https://www.npr.org/podcasts/510289/planet-money/) by NPR
+* [CoRecursive](https://corecursive.com/) by Adam Gordon Bell
+* [Your Undivided Attention](https://www.humanetech.com/podcast) by Tristan Harris and Aza Raskin
 
