--- a/v3/pages/index.mdx
+++ b/v3/pages/index.mdx
@@ -4,6 +4,8 @@ import {Maze} from '../lib/maze'
 
 export const title = '8-p.info'
 
+export const footer = false
+
 <Index />
 
 Hello! This is <Link href="/me/">Kazuyoshi Kato</Link>'s homepage.
@@ -12,7 +14,12 @@ I'm a Japanese software developer in Seattle, Washingon.
 
 ## Things I made recently
 
-- <Link href="/maze/">Making a maze</Link> - because my kids love mazes.
+<div>
+  <Maze width={10} height={10} text={false}/>
+  <p>
+    <Link href="/maze/">Making a maze</Link> - because my kids love mazes.
+  </p>
+</div>
 
 ## My opinion about software development
 
