--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -7,7 +7,7 @@ title: 令和にふりかえる C10K 問題
 令和になってから C10K 問題を語るときに、
 
 * [Re: NginxとApacheって何が違うの？？](https://blog.inductor.me/entry/2022/05/31/150707) (2022)
-* [C10K 問題、実は理解していない](https://blog.ojisan.io/c10k-wakaran/)
+* [C10K 問題、実は理解していない](https://blog.ojisan.io/c10k-wakaran/) (2023)
 
 細かな出来事の時系列があんまり理解されていないなと思ったので、まとめてみました。
 
