More about Linux versions

--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -54,6 +54,15 @@ USENIX Annual Technical Conference 2001 で発表された [Kqueue: A generic an
 
 > 10-30-2002 - The epoll patch merged inside the Linux Kernel.
 
+マージされた最初のバージョン 2.5.45 も同年にリリースされている。
+
+[Development kernel 2.5.45 released](https://lwn.net/Articles/14197/)
+
+> Device mapper (LVM2), crypto/ipsec stuff for networking, epoll and giving the new kernel configurator a chance.
+> Big things.
+
+ただし、当時の Linux カーネルの開発では「マイナーバージョンが奇数は開発版」とされていたため、実際に安定版のカーネルにはいるのは2003年の [2.6.0](https://lwn.net/Articles/63621/) 以降となる。
+
 #### JSR 51 ファイナルリリース
 
 [JSR 51: New I/O APIs for the Java Platform](https://jcp.org/en/jsr/detail?id=51)
