More about Nginx

--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -205,3 +205,11 @@ KVM は Intel VT-x をつかった仮想化を Linux で可能にした。
 > 現在はデータセンター側にフロントサーバとして20台のNginxを設置して、これにURL文字列のハッシュ値をベースとする負荷分散の仕組み「carp」のモジュールを入れて使っているという。
 
 なお、[2009年の講演資料](http://blog.livedoor.jp/techblog/techsemi/techsemi20090925_03_pixiv_kamipo.pdf) (PDF) によると、当時は Apache 中心だった。
+
+[nginx & Perl](http://yapcasia.org/2010/talks/63D4668C-BC8C-11DF-8791-B9FC0F276C45)
+
+> 最近シェアを伸ばしている高速 Web サーバ nginx。 組み込み Perl 機能や PSGI standalone server と組み合わせての使い方などを紹介します。
+
+[YAPC::Asia2010で「nginx & Perl」の発表をしてきました](https://sfujiwara.hatenablog.com/entry/20101016/1287205507)
+
+> YAPC::Asia2010 で、「nginx & Perl」という題名で20分の発表をさせていただきました。
