--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -21,6 +21,16 @@ title: 令和にふりかえる C10K 問題
 
 >  It's time for web servers to handle ten thousand clients simultaneously, don't you think? After all, the web is a big place now.
 
+C10K 問題として名前がつけられ、広く知られるようになる。ただし、同年にリリースされている Solaris に `/dev/poll` が実装されているからもわかるように、これ以前にも一部で問題自体は認識されていた。
+
+[What's New in the Solaris 8 Operating Environment](https://docs.oracle.com/cd/E19455-01/805-6332/6j5vhemod/index.html)
+
+> /dev/poll is a second form of polling for the completion of I/O events that provides much higher performance when a very large number of events must be polled for on file descriptors that remain open for a long time. This feature supplements poll(2); it does not replace poll(2).
+>
+> For more information, see the System Interface Guide.
+>
+> This feature was first available in the Solaris 7 5/99 release.
+
 ### 2000
 
 #### kqueue を実装した FreeBSD 4.1 がリリースされる
@@ -34,8 +44,7 @@ title: 令和にふりかえる C10K 問題
 > changes in sockets, pipes, fifos, and files are present, as well as
 > for signals and processes.
 
-なお、kqueue に先行して Solaris には /dev/poll が実装されている。
-USENIX Annual Technical Conference 2001 で発表された [Kqueue: A generic and scalable event notification facility](https://www.usenix.org/legacy/publications/library/proceedings/usenix01/freenix01/full_papers/lemon/lemon.pdf) では、/dev/poll について
+USENIX Annual Technical Conference 2001 で発表された [Kqueue: A generic and scalable event notification facility](https://www.usenix.org/legacy/publications/library/proceedings/usenix01/freenix01/full_papers/lemon/lemon.pdf) では、`/dev/poll` についても
 
 > This system appears to come closest to the design outlined in this paper, but has some limitations as com-
 > pared to kqueue.
