--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -51,6 +51,16 @@ USENIX Annual Technical Conference 2001 で発表された [Kqueue: A generic an
 
 と言及されている。
 
+### 2001
+
+#### Intel, IA-64 命令セットを実装した最初の CPU, Itanium をリリース
+
+[Intel's Itanium finally arrives](https://www.computerworld.com/article/2582148/intel-s-itanium-finally-arrives.html)
+
+> The announcement last week that systems based on Intel Corp.'s long-delayed Itanium processor should start shipping this month was welcome news to users hoping to run large enterprise applications on commodity hardware, users and analysts said.
+
+x86 アーキテクチャの64ビット化の幕開け、と思われたが、最終的には AMD の x86-64 アーキテクチャに負けることとなる。
+
 ### 2002
 
 #### epoll が Linux カーネルにマージされる
@@ -98,6 +108,15 @@ Dan Kegal もエキスパートグループに参加している。
 > rificing either performance or functionality.
 
 Xen は、CPU 自体に仮想化命令のない x86 アーキテクチャで、改変した Linux を動かすことを可能にした。
+
+
+#### AMD, x86-64 命令セットを実装した最初の CPU, Opteron をリリース
+
+[AMD's Opteron debuts](https://www.computerworld.com/article/2570634/amd-s-opteron-debuts.html)
+
+> After nearly a year of hype and development, Advanced Micro Devices Inc. today set loose its new 64-bit Opteron processors, which the company hopes will attract buyers who seek the power advantages of 64-bit computing but are leery of the costs involved in adopting other 64-bit architectures.
+
+2004年には Intel も "Intel 64" として互換性のある命令セットを実装する。なお、Go が x86-64 を "amd64" と呼んでいるのは AMD 起源のため。
 
 ### 2004
 
