--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -184,6 +184,8 @@ SQS (Simple Queue Service), S3 (Simple Storage Service) に続いて、EC2 (Elas
 
 > So what makes these apps special? What makes them different from other things that might at first glance appear similar? Fundamentally, they all use long-lived HTTP connections to reduce the latency with which messages are passed to the server.
 
+Comet が流行って HTTP の接続を維持するようになったら、人気のないサイトでも同時接続数を気にする必要があるのでは、と思われるも、実際にはそこまで流行らなかった。
+
 #### インターネット
 
 [Web 2.0の挑戦者：超軽快なウェブチャットLingr](https://japan.cnet.com/article/20265928/)
