--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -11,6 +11,13 @@ title: 令和にふりかえる C10K 問題
 
 細かな出来事の時系列があんまり理解されていないなと思ったので、epoll などの技術的な改善、Nginx などのソフトウェアのリリース、当時の雰囲気をつたえるような日本国内のインタビュー記事などをまとめてみました。
 
+
+## 書き足したいところ
+
+- マルチコア時代以前の人々のスレッド観: シングルコアでマルチプロセスな OS を動かしていたんだから、スレッドも大量に建てるつもりだったのか?
+- epoll がはいったのは 2.5.44 or 2.5.45? man とかには 2.5.44 と書いてあるんだけど、Linus のリリースメールでふれられているのは 2.5.45 なのが謎。
+- Xen vs. KVM: VT-x 以降にもみんな Xen つかっているのはなんなのか。Xen 経由で KVM つかってる?
+
 ## タイムライン
 
 ### 1999
