--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -185,6 +185,8 @@ SQS (Simple Queue Service), S3 (Simple Storage Service) に続いて、EC2 (Elas
 
 > On August 25, 2006, we started the public beta of our first ever EC2 instance. Back then, it didn’t even have a name yet, but we latter dubbed it “m1.small.”. Our first customers were able to use the equivalent of 1.7 GHz Xeon processor, 1.75 GB of RAM, 160 GB of local disk and 250 Mb/second of network bandwidth for just 10 cents an hour whenever they needed it and for as long as they needed it. Under the hood, we used the Xen hypervisor to provide these virtual machines or instances as we call them.
 
+ただし、当時はそもそも東京リージョンがないこと、価格あたりの性能などの問題から、国内ではすぐには使われなかった。
+
 #### Alex Russell, Comet を命名
 
 [Comet: Low Latency Data for the Browser](https://infrequently.org/2006/03/comet-low-latency-data-for-the-browser/)
@@ -266,3 +268,23 @@ KVM は Intel VT-x をつかった仮想化を Linux で可能にした。
 [YAPC::Asia2010で「nginx & Perl」の発表をしてきました](https://sfujiwara.hatenablog.com/entry/20101016/1287205507)
 
 > YAPC::Asia2010 で、「nginx & Perl」という題名で20分の発表をさせていただきました。
+
+### 2011
+
+#### AWS, 東京リージョンを開設
+
+[Announcing the AWS Asia Pacific (Tokyo) Region](https://aws.amazon.com/about-aws/whats-new/2011/03/02/announcing-asia-pacific-tokyo-region/)
+
+> AWS is excited to announce the immediate availability of its new Asia Pacific (Tokyo) Region. Starting today, Japan-based businesses and global companies with customers in Japan can run their applications and workloads in the Tokyo Region to reduce latency to end-users, keep their data entirely in Japan, and avoid the undifferentiated heavy lifting associated with maintaining and operating their own infrastructure.
+
+東京リージョン開設移行、国内の企業でも、クックパッドなどを皮切りに、インフラをクラウド上につくることが現実的になりはじめる。
+
+[人気レシピを食べながらクックパッドのAWS導入の話を聞いた](https://ascii.jp/elem/000/000/929/929256/)
+
+> そこで、シンガポールリージョンにあった時期からAWSを導入し、動的にサーバーを増やせるAWSのオートスケールを活用。「バレンタインにチョコ作る人の気持ちを考えたら、アクセス過多でレシピにアクセスできないなんてありえない。その女子の人生がかかっているかもしれない」と胸アツなコメントをした成田氏は、ピーク時でも快適にアクセスできるインフラをAWSで構築。コスト面に関しては、決してデータセンターの時と比べて安価になったわけではないが、余剰なサーバーを持たないで済むようになったという。
+>
+> その後、2011年11月には、社内システムまで含めて、すべてのサービスをAWS化し、EC2とS3を組み合わせたVPC（Virtual Private Cloud）環境で運用している。「社内にはもはやほとんどサーバーはないです。社内wikiや人事評価システムも、AWS上に構築しています」（成田氏）。
+
+[クックパッドのAWS活用術　1日10回デプロイする大規模サイトの裏側 （前編）](https://www.sbbit.jp/article/cont1/27757)
+
+> クックパッドは昔はデータセンターを持っていましたが、2011年にAWSの東京リージョンができたのをきっかけに、AWSに全部サーバを移行しました。
