--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -11,6 +11,8 @@ title: 令和にふりかえる C10K 問題
 
 細かな出来事の時系列があんまり理解されていないなと思ったので、epoll などの技術的な改善、Nginx などのソフトウェアのリリース、当時の雰囲気をつたえるような日本国内のインタビュー記事などをまとめてみました。
 
+ふりかえってみると、2000年から2010年あたりは、select(2) 代替の API, x86 アーキテクチャの64ビット化と仮想化命令の実装、CPU のマルチコア化、クラウドなどなどが詰まった、なかなか面白い10年だったように思います。
+
 
 ## 書き足したいところ
 
