--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -4,15 +4,11 @@ title: 令和にふりかえる C10K 問題
 
 # 令和にふりかえる C10K 問題
 
-令和になってから C10K 問題を語るときに、
+C10K 問題 (the C10K Problem) は1999年に Dan Kegel が発表した文章、ならびにそこで提示された「問題」です。文章はその後も2000年代前半に何度か更新されているのですが、さすがに令和になってから読み返すと、当初の問題意識がわかりにくくなってしまうところがあります。
 
-* [Re: NginxとApacheって何が違うの？？](https://blog.inductor.me/entry/2022/05/31/150707) (2022)
-* [C10K 問題、実は理解していない](https://blog.ojisan.io/c10k-wakaran/) (2023)
+2000年からの10年は、ソフトウェアでは select(2) 代替の API とそれを使ったサーバーの普及、ハードウェアでは、x86 アーキテクチャの64ビット・マルチコア化と仮想化命令、さらにそこに、クラウドも登場するという、なかなか面白い時代でした。
 
-細かな出来事の時系列があんまり理解されていないなと思ったので、epoll などの技術的な改善、Nginx などのソフトウェアのリリース、当時の雰囲気をつたえるような日本国内のインタビュー記事などをまとめてみました。
-
-ふりかえってみると、2000年からの10年は、ソフトウェアでは select(2) 代替の API とそれを使ったサーバーの普及、ハードウェアでは、x86 アーキテクチャの64ビット・マルチコア化と仮想化命令、そしてクラウドが登場する、なかなか面白い時代だったように思います。
-
+ここでは、それらの出来事を中心に、さらに、当時の雰囲気をつたえるような日本国内のブログやインタビュー記事をまとめてみました。
 
 ## 書き足したいところ
 
