Polish the lead

--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -4,11 +4,11 @@ title: 令和にふりかえる C10K 問題
 
 # 令和にふりかえる C10K 問題
 
-C10K 問題 (the C10K Problem) は1999年に Dan Kegel が発表した文章、ならびにそこで提示された「問題」です。文章はその後も2000年代前半に何度か更新されているのですが、さすがに令和になってから読み返すと、当初の問題意識がわかりにくくなってしまうところがあります。
+C10K 問題 (the C10K problem) は1999年に Dan Kegel が発表した文章、ならびにそこで提示された「問題」です。文章はその後も2000年代前半に何度か更新されているのですが、さすがに令和に読み返すと、当初の問題意識がわかりにくいところがあります。
 
-2000年からの10年は、ソフトウェアでは select(2) 代替の API とそれを使ったサーバーの普及、ハードウェアでは、x86 アーキテクチャの64ビット・マルチコア化と仮想化命令、さらにそこに、クラウドも登場するという、なかなか面白い時代でした。
+2000年からの10年は、ソフトウェアでは select(2) 代替の API とそれを使ったサーバーの普及、ハードウェアでは、x86 アーキテクチャの64ビット・マルチコア化と仮想化命令、さらにそこに、クラウドも登場するという、面白い時代でした。
 
-ここでは、それらの出来事を中心に、さらに、当時の雰囲気をつたえるような日本国内のブログやインタビュー記事をまとめてみました。
+ここでは、それらの出来事を中心に、さらに、当時の雰囲気をつたえるような日本国内のブログやインタビュー記事をまとめることで、C10K 問題が、さまざまな側面から解決されていく流れを説明したいと思います。
 
 ## 書き足したいところ
 
