--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -41,7 +41,7 @@ C10K 問題として名前がつけられ、広く知られるようになる。
 >
 > This feature was first available in the Solaris 7 5/99 release.
 
-また、Linux を使って安価な x86 マシンを水平にならべることの有用性も、すでに認識されていたと思われる。たとえば、NASA の Bowulf が発表されたカンファレンスは ICPP (International Conference on Parallel Processing) 1995 である。
+また、無料の Unix 系 OS を使って安価な x86 マシンを水平にならべることの有用性も、当時すでに認識されていたと思われる。たとえば、NASA の Linux クラスタ、Beowulf が発表されたカンファレンスは1995年の ICPP (International Conference on Parallel Processing) である。
 
 [BEOWULF: A parallel workstation for scientific computation](https://webhome.phy.duke.edu/~rgb/brahma/Resources/beowulf/papers/ICPP95/icpp95.html)
 
