--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -41,11 +41,19 @@ C10K 問題として名前がつけられ、広く知られるようになる。
 >
 > This feature was first available in the Solaris 7 5/99 release.
 
-また、無料の Unix 系 OS を使って安価な x86 マシンを水平にならべることの有用性も、当時すでに認識されていたと思われる。たとえば、NASA の Linux クラスタ、Beowulf が発表されたカンファレンスは1995年の ICPP (International Conference on Parallel Processing) である。
+また、無料の Unix 系 OS を使って安価な x86 マシンを水平にならべることの有用性も、当時すでに認識されていたと思われる。
+
+たとえば、NASA の Linux クラスタ、Beowulf が発表されたカンファレンスは1995年の ICPP (International Conference on Parallel Processing),
 
 [BEOWULF: A parallel workstation for scientific computation](https://webhome.phy.duke.edu/~rgb/brahma/Resources/beowulf/papers/ICPP95/icpp95.html)
 
 > The Beowulf parallel workstation project is driven by a set of requirements for high performance scientific workstations in the Earth and space sciences community and the opportunity of low cost computing made available through the PC related mass market of commodity subsystems. This opportunity is also facilitated by the availability of the Linux operating system, a robust Unix-like system environment with source code that is targeted for the x86 family of microprocessors including the Intel Pentium.
+
+また、1998年創業の Google も最初から Linux を使っていた。
+
+[Red Hat Linux Powers Google's Award-Winning Search Engine](https://www.redhat.com/en/about/press-releases/press-google)
+
+> Google has used Red Hat Linux for all its Internet computing functions since its inception in 1998. To generate the necessary power for its in-depth searching capabilities, Google needed a large cluster with the dependability and scalability of UNIX, but without the prohibitive cost.
 
 ### 2000
 
