--- a/v4/src/ja/c10k.md
+++ b/v4/src/ja/c10k.md
@@ -345,7 +345,7 @@ Lingr に続く、数少ない Comet 導入事例のひとつ。
 
 > Webサーバ apache 2.2.9 (prefork, event)
 
-前掲のミクシィ同様に、2種類の Apache を組み合わせる構成。なお、[著者の kamipo さんもいうとおり](2009年当時まだexperimentalだったApache event mpmを使ってますってイキってたときのわいの資料にリンク貼ってある！)、Apache 2.2.x での [event](https://httpd.apache.org/docs/2.2/mod/event.html) は "experimental" の扱いである。
+前掲のミクシィ同様に、2種類の Apache を組み合わせる構成。なお、[著者の kamipo さんもいうとおり](https://twitter.com/kamipo/status/1645758631076593665)、Apache 2.2.x での [event](https://httpd.apache.org/docs/2.2/mod/event.html) は "experimental" の扱いである。
 
 > 2009年当時まだexperimentalだったApache event mpmを使ってますってイキってたときのわいの資料にリンク貼ってある！
 
